fix: remove unnecessary scrollbars

--- a/src/entities/query/ui/query-field/QueryField.module.scss
+++ b/src/entities/query/ui/query-field/QueryField.module.scss
@@ -14,7 +14,7 @@
     display: flex;
     width: 100%;
     flex-shrink: 9999;
-    overflow: scroll;
+    overflow: auto;
     padding: 1rem 1rem 0 1rem;
   }
 
