--- a/src/entities/response/ui/response-field/ResponseField.module.scss
+++ b/src/entities/response/ui/response-field/ResponseField.module.scss
@@ -6,5 +6,5 @@
   border-radius: 12px;
   padding: 1rem;
   z-index: 0;
-  overflow: scroll;
+  overflow: auto;
 }
